[package]
name = "ultimate-morpion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggegui = "0.4.0"
ggez = { version = "0.9.3", features = ["multithread-image-decoding"] }
glam = "0.24.2"
rand = "0.9.0"
